overflow correction

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
     font-size: 2vmin;
     width: 100vw;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 
